# Sysinternals-jcd

./: Cargo.toml  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  SHIFT_TAB_IMPLEMENTATION.md  SUPPORT.md  VERSION  azure-pipelines.yml  build.rs  jcd_function.sh  makePackages.sh
.devcontainer/: devcontainer.json
debian/: postinst
src/: jcd_function.sh  main.rs
templates/: build.yaml
tests/: README.md  final_absolute_path_test.sh  quick_regression_test.sh  run_all_tests.sh  simple_test.sh  test_absolute_bug.sh  test_absolute_path_consistency.sh  test_ignore_functionality.sh  test_ignore_patterns.sh  test_not_break_environment.sh  test_regression_fix.sh  test_relative_comprehensive.sh  test_symlink.sh  validate_jcd.sh  validate_mcd.sh  validate_shift_tab.sh  verify_basic_functionality.py
