# --------------------------------------------------------------------------------
# Use: cargo set-version "<version>" to set the version number (defaults to 0.0.0)
# --------------------------------------------------------------------------------
[package]
name = "jcd"
version = "0.0.0"
edition = "2021"
description = "Enhanced directory navigation tool with substring matching and tab completion cycling"
authors = ["GitHub Copilot Assistant"]
license = "MIT"
repository = "https://github.com/microsoft/jcd"
keywords = ["cli", "navigation", "directory", "filesystem", "productivity"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
regex = "1.10"

[package.metadata.deb]
maintainer = "Sysinternals <syssite@microsoft.com>"
name = "jcd"
extended-description = "jcd (Jump Change Directory) is a Rust-based command-line tool that provides enhanced directory navigation with substring matching and smart selection. It's like the cd command, but with superpowers!"
maintainer-scripts = "debian/"
assets = [
    ["target/release/jcd", "usr/bin/jcd", "755"]
]

[package.metadata.rpm.targets]
jcd = { path = "/usr/bin/jcd" }

