# --------------------------------------------------------------------------------
# Use: cargo set-version "<version>" to set the version number (defaults to 0.0.0)
# --------------------------------------------------------------------------------
[package]
name = "jcd"
version = "0.0.0"
edition = "2021"
description = "Enhanced directory navigation tool with substring matching and tab completion cycling"
authors = ["GitHub Copilot Assistant"]
license = "MIT"
repository = "https://github.com/microsoft/jcd"
keywords = ["cli", "navigation", "directory", "filesystem", "productivity"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
regex = "1.10"
